# NI-RUN

./: hw0.fml  install.sh  parsed.json
fml_ast_interpreter/: .clang-format  AstNodes.cpp  AstNodes.h  AstParser.cpp  AstParser.h  CMakeCache.txt  CMakeLists.txt  Environment.cpp  Environment.h  Makefile  cmake_install.cmake  fml_ast_interpreter.cbp  main.cpp
fml_ast_interpreter/src/: AstNodes.cpp  AstNodes.h  AstParser.cpp  AstParser.h  Environment.cpp  Environment.h  main.cpp
fml_ast_interpreter/src/visitors/: ExecVisitor.cpp
fml_ast_interpreter/test/: test01.fml  test02.fml
fml_ast_interpreter/visitors/: ExecVisitor.cpp  ExecVisitor.h
